# omjit

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
samples/: add.js  sum.js
src/: codegen.rs  environment.rs  flow_graph.rs  lib.rs  main.rs  source_location.rs
src/codegen/: gdb_jit.rs
src/flow_graph/: basic_block.rs  flow_instruction.rs  scope.rs  tail_instruction.rs  value.rs
src/flow_graph/nodes/: expression.rs  expression_statement.rs  for_statement.rs  function_decl.rs  mod.rs  return_statement.rs  variable_declaration.rs
src/flow_graph/value/: system_function.rs
tests/: sample_test.rs
