[package]
name = "omjit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
almond = "0.2.0"
anyhow = "1.0.44"
structopt = "0.3.23"
nom = "6.2"
nom_locate = "3"
memmap = "0.7.0"
lazy_static = "1.4.0"


[dependencies.iced-x86]
version = "1.14.0"
features = ["code_asm"]
